hphp/test/zend/good/ext/standard/tests/math/constants_basic.php
<?php
ini_set('precision', 14);

echo "M_E= ";
var_dump(M_E);
echo "M_LOG2E= ";
var_dump(M_LOG2E);
echo "M_LOG10E= ";
var_dump(M_LOG10E);
echo "M_LN2= ";
var_dump(M_LN2);
echo "M_LN10= ";
var_dump(M_LN10);
echo "M_PI= ";
var_dump(M_PI);
echo "M_PI_2= ";
var_dump(M_PI_2);
echo "M_PI_4= ";
var_dump(M_PI_4);
echo "M_1_PI= ";
var_dump(M_1_PI);
echo "M_2_PI= ";
var_dump(M_2_PI);
echo "M_SQRTPI= ";
var_dump(M_SQRTPI);
echo "M_2_SQRTPI= ";
var_dump(M_2_SQRTPI);
echo "M_LNPI= ";
var_dump(M_LNPI);
echo "M_EULER= ";
var_dump(M_EULER);
echo "M_SQRT2= ";
var_dump(M_SQRT2);
echo "M_SQRT1_2= ";
var_dump(M_SQRT1_2);
echo "M_SQRT3= ";
var_dump(M_SQRT3);
echo "INF= ";
var_dump(INF);
echo "NAN= ";
var_dump(NAN);
?>