hphp/test/zend/bad/ext/standard/tests/file/bug24313.php
<?php
ini_set('open_basedir', /dev);

	var_dump(file_exists("/dev/bogus_file_no_such_thing"));
?>